fixes navbar overlap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -210,16 +210,6 @@ div#login{
   color: #CC0000;
 }
 
-/* Link bar (chooser + tabs)
-======================================================================= */
-#link_bar {
-	height: 3.1em;
-  background-color: #8B9B6C;
-/*  border-bottom: 1px solid #FFFFFF;*/
-/*  height: 25px;*/
-/*  padding: 5px 10px 4px;*/
-}
-
 /* chooser
 --------------------------------------------------------- */
 #chooser {
